--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/homesmart_result/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>homesmart</title>
-  <script type="module" crossorigin src="/assets/index.7b11016b.js"></script>
-  <link rel="stylesheet" href="/assets/index.8db5b65a.css">
+  <script type="module" crossorigin src="/homesmart_result/assets/index.7b11016b.js"></script>
+  <link rel="stylesheet" href="/homesmart_result/assets/index.8db5b65a.css">
 </head>
 
 <body class="
@@ -51,7 +51,7 @@ mx-auto
           hover:opacity-75
           transition-opacity
           " aria-label="go to homepage">
-        <img src="/assets/logo.b1772fa0.svg" alt="logo" width="200" class="w-48 md:w-64 lg:w-72">
+        <img src="/homesmart_result/assets/logo.b1772fa0.svg" alt="logo" width="200" class="w-48 md:w-64 lg:w-72">
 
       </a>
       <button id="menu" aria-expanded="false" aria-label="open menu" class="
@@ -189,14 +189,14 @@ mx-auto
     place-items-end
     px-2
     ">
-      <img src="/assets/couch.b4534081.png" class="
+      <img src="/homesmart_result/assets/couch.b4534081.png" class="
       row-start-1
       row-end-2
       col-start-1
       col-end-2
       mx-auto
     " alt="">
-      <img src="/assets/app.d9e182b3.svg" class="
+      <img src="/homesmart_result/assets/app.d9e182b3.svg" class="
     row-start-1
     row-end-2
     col-start-1
@@ -251,7 +251,7 @@ mx-auto
     </a>
 
     <section aria-labelledby="qualities" class="relative">
-      <img src="/assets/dots.ef4b771c.svg" alt="dots" aria-hidden="true" class="
+      <img src="/homesmart_result/assets/dots.ef4b771c.svg" alt="dots" aria-hidden="true" class="
         hidden
 
         lg:block
@@ -261,7 +261,7 @@ mx-auto
         -left-24
         xl:-left-7
       ">
-      <img src="/assets/dots.ef4b771c.svg" alt="dots" aria-hidden="true" class="
+      <img src="/homesmart_result/assets/dots.ef4b771c.svg" alt="dots" aria-hidden="true" class="
         hidden
 
         lg:block
@@ -389,25 +389,25 @@ mx-auto
         md:gap-x-16
       ">
         <div class=" shadow-md p-4 rounded-md bg-white">
-          <img class="h-24 w-24 md:w-36 md:36" src="/assets/partner1.b765642c.svg" alt="">
+          <img class="h-24 w-24 md:w-36 md:36" src="/homesmart_result/assets/partner1.b765642c.svg" alt="">
         </div>
         <div class=" shadow-md p-4 rounded-md bg-white">
-          <img class="h-24 w-24 md:w-36 md:36" src="/assets/partner2.75cd4649.svg" alt="">
+          <img class="h-24 w-24 md:w-36 md:36" src="/homesmart_result/assets/partner2.75cd4649.svg" alt="">
         </div>
         <div class=" shadow-md p-4 rounded-md bg-white">
-          <img class="h-24 w-24 md:w-36 md:36" src="/assets/partner3.df76b384.svg" alt="">
+          <img class="h-24 w-24 md:w-36 md:36" src="/homesmart_result/assets/partner3.df76b384.svg" alt="">
         </div>
         <div class=" shadow-md p-4 rounded-md bg-white">
-          <img class="h-24 w-24 md:w-36 md:36" src="/assets/partner4.6e816758.svg" alt="">
+          <img class="h-24 w-24 md:w-36 md:36" src="/homesmart_result/assets/partner4.6e816758.svg" alt="">
         </div>
         <div class=" shadow-md p-4 rounded-md bg-white">
-          <img class="h-24 w-24 md:w-36 md:36" src="/assets/partner5.398482a9.svg" alt="">
+          <img class="h-24 w-24 md:w-36 md:36" src="/homesmart_result/assets/partner5.398482a9.svg" alt="">
         </div>
         <div class=" shadow-md p-4 rounded-md bg-white">
-          <img class="h-24 w-24 md:w-36 md:36" src="/assets/partner6.510672ac.svg" alt="">
+          <img class="h-24 w-24 md:w-36 md:36" src="/homesmart_result/assets/partner6.510672ac.svg" alt="">
         </div>
         <div class=" shadow-md p-4 rounded-md bg-white">
-          <img class="h-24 w-24 md:w-36 md:36" src="/assets/partner7.27f820be.svg" alt="">
+          <img class="h-24 w-24 md:w-36 md:36" src="/homesmart_result/assets/partner7.27f820be.svg" alt="">
         </div>
       </div>
     </section>
@@ -456,7 +456,7 @@ mx-auto
     ring-offset-white
   ">sign up</a>
         </div>
-        <img src="/assets/table.dffa17bc.png" alt="table">
+        <img src="/homesmart_result/assets/table.dffa17bc.png" alt="table">
       </div>
       <div class="
         absolute
@@ -493,7 +493,7 @@ mx-auto
       ">
         <div class="flex flex-wrap justify-center gap-12 md:gap-6 lg:gap-20">
           <div class="md:flex-1 md:max-w-sm relative">
-            <img src="/assets/lamp.1475ae28.png" alt="alt" class="mx-auto relative -z-20">
+            <img src="/homesmart_result/assets/lamp.1475ae28.png" alt="alt" class="mx-auto relative -z-20">
 
             <a href="#" class="
       flex
@@ -524,7 +524,7 @@ mx-auto
               <span>download the app</span>
             </a>
 
-            <img src="/assets/app.d9e182b3.svg" class="hidden md:block drop-shadow-xl
+            <img src="/homesmart_result/assets/app.d9e182b3.svg" class="hidden md:block drop-shadow-xl
             absolute
             left-1/2
             -translate-x-1/2
